@@ -8,6 +8,7 @@ $Id$
 	-L flag or by setting the NO_LINE_NUMBER environment variable
  - Turn compile on tutorial on by configure-time switch '--enable-tutorial'
  - tame -v now shows a version number.
+ - Compile fixes for GCC 4.0 in rpctypes.h
 	
 0.8.4 
  - Fix warn() statements in paillier.C so that they compile on ia64
